# streamlit-run

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
_default/: Dockerfile  app.py
backend01/: Dockerfile  app.py
backend02/: Dockerfile  app.py  requirements.txt
terraform/: main.tf  variable.tf  versions.tf
